Closed
Bug 1073134
Opened 11 years ago
Closed 11 years ago
Download failure on OSX 10.9.5 with parental control on
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
RESOLVED
FIXED
mozilla36
People
(Reporter: jerome.gallinari, Assigned: dougt)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
1.47 KB,
patch
|
jdm
:
review+
lmandel
:
approval-mozilla-aurora+
lmandel
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
|
72 bytes,
text/plain
|
Details |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.9; rv:31.0) Gecko/20100101 Firefox/31.0
Build ID: 20140716183446
Steps to reproduce:
Install FF 32.0.3 on OSX 10.9.5
Create an OSX user with parental control set to on and log in with this user
Download anything
Actual results:
Downloading fails immediately leaving 2 files: a .part and the file itself
Expected results:
Downloading should have completed
Note: FF 31 does not have the same issue. FF beta 33 and Aurora 34 do have it.
Updated•11 years ago
|
Component: Untriaged → Widget: Cocoa
Product: Firefox → Core
Comment 1•11 years ago
|
||
I can confirm the reported bug with Firefox32.0.3 on OSX10.9.5 and it worked with an older Firefox version (i tested it with Firefox30).
Comment 3•11 years ago
|
||
No more inbounds to bisect
Last good revision: 41708cef5ec1
First bad revision: 2a03b34c8953
Pushlog:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=41708cef5ec1&tochange=2a03b34c8953
Comment 4•11 years ago
|
||
I'm confused. Bug 1075187 seems to indicate that you cannot access any website with parental controls turned on. Here however, you indicate that download is broken. Could you explain what steps you take before attempting the download? Are you manually adding sites to the list of trusted sites?
Flags: needinfo?(jerome.gallinari)
| Reporter | ||
Comment 5•11 years ago
|
||
(In reply to Stephen Pohl [:spohl] from comment #4)
> I'm confused. Bug 1075187 seems to indicate that you cannot access any
> website with parental controls turned on. Here however, you indicate that
> download is broken. Could you explain what steps you take before attempting
> the download? Are you manually adding sites to the list of trusted sites?
Yes, before proceeding to the download, I generally added the URLs into the OSX list of safe sites as admin.
This is what the popup dialog proposes when first accessing the website.
Flags: needinfo?(jerome.gallinari)
Comment 6•11 years ago
|
||
Okay, sounds like we should definitely be looking into bug 1075187 first, as it may just fix this bug here. Thanks!
Comment 7•11 years ago
|
||
This bug also happens in another browser -- Opera. So it must be an Apple bug. For some reason, though, it doesn't happen in Chrome or Safari. I tested in Firefox 32.0.3, downloading http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2014-10-01-03-02-05-mozilla-central/firefox-35.0a1.en-US.mac.dmg.
If, as you report, earlier Firefox versions don't trigger this Apple bug, we may be able to find a way to work around it. But we're very busy with more urgent bugs, and I'm not sure when we'll get to it. Please report this bug to Apple.
(Note that Opera, unlike Firefox, doesn't report that the download failed. But the download is always incomplete.)
Comment 8•11 years ago
|
||
Oops. I just tried the same download again in all three browsers (FF 32.0.3 and the current versions of Chrome and Opera). This time all three downloads worked! Though the download made in Firefox never got renamed from *.part to *.dmg.
This is still pretty clearly an Apple bug, but it'd probably be worth our while to try to find a workaround.
Comment 9•11 years ago
|
||
In order to avoid getting my tests broken by too many "secure web site detected" dialogs (from bug 1075187), I turned off "Try to limit access to adult web sites automatically..." (in my admin account) before testing.
Comment 10•11 years ago
|
||
I suspect the games played by Apple's parental controls slow down its network stack, or sometimes even prevent it from working properly. That could explain problems downloading, particularly for large files.
Comment 11•11 years ago
|
||
As I said, it'll likely be a while before we get to this bug. In the meantime it's probably best to use Safari to download large files in an account using parental controls. Apple is likely aware of the network stack problems, and if so will likely have given Safari secret workarounds.
Comment 12•11 years ago
|
||
Comment 13•11 years ago
|
||
Matti: It's only worth trying to find a regression range for this bug if it's very easily reproducible. Given my results above I suspect it's not ... but I haven't done much testing.
Also, it must be a regression range in m-c nightlies to be any use at all.
Until we have a well-founded m-c regression range, there's not much point speculating which patch might have made things worse.
Comment 14•11 years ago
|
||
Matti: Oops, sorry, I see you've already found the regression range :-)
Comment 15•11 years ago
|
||
I can't begin to guess which patch might have made this problem worse.
Comment 16•11 years ago
|
||
Not sure if an "I have this bug too" is very helpful at this stage but noticing a comment about whether the bug is reproducible, I thought I should offer my two cents.
I run an OSX 10.9 based Mac office with mid portion of the double digit number range of users. All none sys-admin users are held under parental controls but granted unlimited access to websites. Some users are on Firefox auto-update and others are manual. All those who auto-updated to Firefox 32.0.x have this exact same issue under their account with parental controls enabled but when I go to the same site as an admin user on their machine, all downloads work like they should do.
Manually downgrading each user machine to Firefox 31 allows all users to download their files like before but it is not an ideal solution. Instead having users switch to Safari or Chrome until Firefox is fixed.
I am also aware of an OSX 10.7.5 home user encountering the exact same problem after upgrading to Firefox 32. As admin, works fine but log in as one of his kids and they can't even download papers from their school.
Not being able to help with the coding side, I have a number of vacant user machines I can run tests on if needed.
Comment 17•11 years ago
|
||
Matti, reading through the comments I get the impression that it would indeed be helpful to know the exact checkin that broke this (re: comment 12).
Flags: needinfo?(bugzilla)
Comment 18•11 years ago
|
||
[Tracking Requested - why for this release]:
This regression breaks all file downloads of OSX users with parental control limited accounts
Damn, i so bad :-(
I should look the next time much harder at all the checkins in a pushlog !
via local building i got this regression range:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=7fffbe8dc9ec&tochange=7202bd8d3e15
I'm pretty sure that this is the bug that broke the file downloads
7202bd8d3e15 Doug Turner — Bug 1006051 - Implement nsIParentalControlsService on the Mac. r=smichaud
status-firefox32:
--- → affected
status-firefox33:
--- → affected
status-firefox34:
--- → affected
status-firefox35:
--- → affected
tracking-firefox33:
--- → ?
tracking-firefox34:
--- → ?
tracking-firefox35:
--- → ?
tracking-firefox-esr31:
--- → ?
Depends on: 1006051
Flags: needinfo?(bugzilla) → needinfo?(dougt)
Comment 19•11 years ago
|
||
This function name from the patch in bug 1006051 (and its body) sounds related. I'd be experimenting with it myself if I wasn't sidetracked by v2 signing work. Figured I'd throw it out there just in case:
> NS_IMETHODIMP
> nsParentalControlsService::GetBlockFileDownloadsEnabled(bool *aResult)
> {
> return NS_ERROR_NOT_AVAILABLE;
> }
Comment 20•11 years ago
|
||
Go to build for 33 rc is today. A patch will have to arrive soon.
Bug 1006051 landed in 32, so, I guess ESR31 is unaffected.
status-firefox-esr31:
--- → unaffected
| Assignee | ||
Updated•11 years ago
|
Assignee: nobody → dougt
Flags: needinfo?(dougt)
| Assignee | ||
Comment 22•11 years ago
|
||
I am trying out a fix.
Builds will be here:
https://ftp-ssl.mozilla.org/pub/mozilla.org/firefox/try-builds/dougt@mozilla.com-59fbb1c6386b
| Assignee | ||
Comment 23•11 years ago
|
||
Attachment #8505228 -
Flags: review?(josh)
Updated•11 years ago
|
Attachment #8505228 -
Flags: review?(josh) → review+
| Assignee | ||
Updated•11 years ago
|
Keywords: checkin-needed
| Assignee | ||
Comment 24•11 years ago
|
||
Updated•11 years ago
|
Attachment #8505228 -
Attachment is patch: true
Comment 25•11 years ago
|
||
Keywords: checkin-needed
Comment 26•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
status-firefox36:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
Comment 27•11 years ago
|
||
34 and 35 are marked as affected. This looks like a safe fix that has been on m-c for several days. Is this suitable for uplift to Beta and Aurora?
Flags: needinfo?(dougt)
Comment 28•11 years ago
|
||
Has anyone who originally reported this bug tested with it?
I have my doubts that the patch actually fixed it.
Comment 29•11 years ago
|
||
I can confirm that downloads are working again in a current nightly Firefox while they are failing with Firefox33.
Jerome:
Could you please also test a nightly Firefox build and confirm that the fix works on your system ?
http://nightly.mozilla.org/
Flags: needinfo?(jerome.gallinari)
| Reporter | ||
Comment 30•11 years ago
|
||
Hi guys,
I've just installed nightly FF 36.0a1 and tried to download something from my OSX 10.10 account with parental control on: it seems to work again now :)
Great job.
jerome
Flags: needinfo?(jerome.gallinari)
Comment 32•11 years ago
|
||
Comment 33•11 years ago
|
||
I am not going to take it for 33.1. 34 is not too far now.
| Assignee | ||
Comment 34•11 years ago
|
||
jjkatz1: what build of firefox did you use?
Flags: needinfo?(dougt)
| Assignee | ||
Comment 35•11 years ago
|
||
Comment on attachment 8505228 [details] [diff] [review]
more_permissive_when_parental_control_is_on
super low risk -- without it, children can't download stuff.
Attachment #8505228 -
Flags: approval-mozilla-beta?
Attachment #8505228 -
Flags: approval-mozilla-aurora?
Comment 36•11 years ago
|
||
Comment on attachment 8505228 [details] [diff] [review]
more_permissive_when_parental_control_is_on
(In reply to Doug Turner (:dougt) from comment #35)
> super low risk -- without it, children can't download stuff.
Some other time we can talk about whether children should be downloading 'stuff'. :)
Beta+
Aurora+
Attachment #8505228 -
Flags: approval-mozilla-beta?
Attachment #8505228 -
Flags: approval-mozilla-beta+
Attachment #8505228 -
Flags: approval-mozilla-aurora?
Attachment #8505228 -
Flags: approval-mozilla-aurora+
Comment 37•11 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•