Bug 1073134 - Be more permissive on OSX 10.9.5 when parental control is on. r=jdm, a=lmandel